--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
   "lint-staged": {
     "*.{js,jsx,ts,tsx, .cjs}": "prettier --write",
     "*.{html,json}": "prettier --write"
+  },
+  "dependencies": {
+    "@forgerock/javascript-sdk": "*",
+    "@forgerock/ping-protect": "*"
   }
 }
